Final Commitgit add .git add .!

--- a/Report/1Intro.tex
+++ b/Report/1Intro.tex
@@ -1,2 +1,2 @@
 \chapter{Introduction and Preliminaries}
-This report will detail the work done for the Numerical Modelling mathematics Honours course. Whenever possible, decimal values will be calculated to double precision. All figures in this report will be generated in MATLAB, with the code written by the author, Antonio Peters. The code, as well as the LaTeX files for this report can be found at \url{https://github.com/caramel-koala/Numerical-Modelling}. The report will build up from analyzing the finite difference method, error approximation and convergence, and boundary conditions to understanding time evolutions and the Riemann problem. We will then look at Flux Conservative and Reconstruction Algorithms. We will finally look at Slope Limiter Methods and use these to simulate high resolution shock capturing in order to solve Burgers' equation.
+This report will detail the work done for the Numerical Modelling mathematics Honours course. Whenever possible, decimal values will be calculated to double precision. All figures in this report will be generated in MATLAB, with the code written by the author, Antonio Peters. The code, as well as the LaTeX files for this report can be found at \url{https://github.com/caramel-koala/Numerical-Modelling}. The report will build up from analyzing the finite difference method, error approximation and convergence, and boundary conditions to understanding time evolutions and the Riemann problem. We will then look at Flux Conservative and Reconstruction Algorithms. We will finally look at Slope Limiter Methods and use these to simulate high resolution shock capturing in order to solve Burgers' equation. All information used to produce this report are derived from lectures on Numerical Modelling by Prof. Denis Pollney, the "Introduction to Partial Differential Equations" lecture notes by Prof. Denis Pollney and "Finite Difference Methods for Differential Equations" by Prof. Randall J. LeVeque.
